METASOURCES = AUTO

noinst_HEADERS = temporal_distortion/eegplugin_tempdist.m  temporal_distortion/find_str_in_cellstr.m \
	temporal_distortion/gibbons/eegplugin_gibbons.m 	temporal_distortion/gibbons/gibbons.m 	temporal_distortion/gibbons/pop_gibbons.m \
	temporal_distortion/padtw/eegplugin_padtw.m 		temporal_distortion/padtw/pop_padtw.m \
	temporal_distortion/warpavg/eegplugin_warpavg.m temporal_distortion/warpavg/pop_warpavg.m \
	wavelet_denoising/pop_waveden.m