INCLUDES = 
METASOURCES = AUTO
noinst_HEADERS = artificial_data.m closest.m fBm.m \
			get_monotonous_function.m	ml_denoise.c ml_dwt.c ml_make.m ml_timewarp.c ml_warpavg.c	plot_spectrum.m rmse.m \
			snr.m testwa.m warpavgtest.m writesig.m ml_testwarppath.c ml_warptwo.c \
	Makefile.matlab
_SOURCES = ml_testwarppath.c
_SOURCES = ml_warptwo.c
